src/test/resources/com/puppycrawl/tools/checkstyle/checks/javadoc/invalidjavadocposition/InputInvalidJavadocPosition2[InputInvalidJavadocPosition]#method21().mjava
    void method21 /** violation */ () {}

